--- a/coming-soon.html
+++ b/coming-soon.html
@@ -1036,8 +1036,8 @@
                                     <a _ngcontent-ng-c1722647403 id="basic-addon2" href="mailto:tech@spherepay.in" class="input-group-text px-3 fw-500 fs-16">Notify Me!</a>
                                 </div>
                             </div>
-                            <!-- <div _ngcontent-ng-c1722647403 class="mt-4">
-                                <a _ngcontent-ng-c1722647403 href="mailto:support@spherepay.in">
+                            <div _ngcontent-ng-c1722647403 class="mt-4">
+                                <!-- <a _ngcontent-ng-c1722647403 href="mailto:support@spherepay.in">
                                     <img _ngcontent-ng-c1722647403 loading="lazy" alt="Mail Icon" src="/assets/images/common-image/coming-mail.svg" class="mr-lg-4 mr-3 cursor-pointer">
                                 </a>
                                 <a _ngcontent-ng-c1722647403 href="">
@@ -1048,8 +1048,8 @@
                                 </a>
                                 <a _ngcontent-ng-c1722647403 href="">
                                     <img _ngcontent-ng-c1722647403 loading="lazy" alt="Youtube Icon" src="/assets/images/common-image/coming-youtube.svg" class="mr-lg-4 mr-3 cursor-pointer">
-                                </a>
-                            </div> -->
+                                </a> -->
+                            </div>
                         </div>
                         <div _ngcontent-ng-c1722647403 class="col-4"></div>
                     </div>
@@ -1163,8 +1163,8 @@
                             </div>
                         </div>
                         <div _ngcontent-ng-c3174313655 class="row pb-2 px-lg-5 mx-lg-5 px-md-3 mx-md-3 px-2 mx-2">
-                            <!-- <div _ngcontent-ng-c3174313655 class="col-lg-3 col-md-6 col-12 mt-2 mt-md-4">
-                                <div _ngcontent-ng-c3174313655 class="text-white fw-700 fs-18">
+                            <div _ngcontent-ng-c3174313655 class="col-lg-3 col-md-6 col-12 mt-2 mt-md-4">
+                                <!-- <div _ngcontent-ng-c3174313655 class="text-white fw-700 fs-18">
                                     Connect with SpherePay on<br _ngcontent-ng-c3174313655>our socials
                                 </div>
                                 <div _ngcontent-ng-c3174313655 class="mt-3">
