--- a/contact-us.html
+++ b/contact-us.html
@@ -809,7 +809,7 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
+                                                    <!-- <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
                                                         <a _ngcontent-ng-c4214895665 href="/coming-soon.html">
                                                             <div _ngcontent-ng-c4214895665 class="row my-2">
                                                                 <div _ngcontent-ng-c4214895665 class="col-2 col-md-2">
@@ -821,7 +821,7 @@
                                                                 </div>
                                                             </div>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
