--- a/corporate-cards.html
+++ b/corporate-cards.html
@@ -941,7 +941,7 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
+                                                    <!-- <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
                                                         <a _ngcontent-ng-c4214895665 href="/coming-soon.html">
                                                             <div _ngcontent-ng-c4214895665 class="row my-2">
                                                                 <div _ngcontent-ng-c4214895665 class="col-2 col-md-2">
@@ -953,7 +953,7 @@
                                                                 </div>
                                                             </div>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -1237,9 +1237,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div _ngcontent-ng-c3949250668 class="col-12 col-lg-6 justify-content-center d-flex mt-4 mt-md-0">
+                        <!-- <div _ngcontent-ng-c3949250668 class="col-12 col-lg-6 justify-content-center d-flex mt-4 mt-md-0">
                             <img _ngcontent-ng-c3949250668 loading="lazy" alt="Corporate Cards Image" src="assets/images/corporate-cards-image/top-img.webp" class="img-fluid top-first-image">
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div _ngcontent-ng-c3949250668 class="container-fluid pl-2 px-lg-5 my-md-5 my-3 bg-primary second-div">
@@ -1796,9 +1796,9 @@
                                                 <a _ngcontent-ng-c3174313655 href="/upi-direct.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">UPI Direct</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">IndiGram</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                             <div _ngcontent-ng-c3174313655 class="col-lg-2 col-md-4 col-12 mt-3 mt-lg-3 px-2 ml-lg-5">
                                                 <h4 _ngcontent-ng-c3174313655 class="fw-700 text-white mb-3">BizStack</h4>
