--- a/home-sme.html
+++ b/home-sme.html
@@ -946,7 +946,7 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
+                                                    <!-- <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
                                                         <a _ngcontent-ng-c4214895665 href="/coming-soon.html">
                                                             <div _ngcontent-ng-c4214895665 class="row my-2">
                                                                 <div _ngcontent-ng-c4214895665 class="col-2 col-md-2">
@@ -958,7 +958,7 @@
                                                                 </div>
                                                             </div>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -1221,7 +1221,7 @@
                     <div _ngcontent-ng-c105331269 class="row my-3 my-md-5">
                         <div _ngcontent-ng-c105331269 class="col-12 col-lg-12">
                             <h2 _ngcontent-ng-c105331269 class="text-warning fw-500 fs-20 m-0 lh-base pl-2 pl-lg-5 ml-lg-5">Explore</h2>
-                            <h3 _ngcontent-ng-c105331269 class="text-primary fw-700 m-0 pl-2 pl-lg-5 ml-lg-5 mt-1">Payment Gateway API</h3>
+                            <h3 _ngcontent-ng-c105331269 class="text-primary fw-700 m-0 pl-2 pl-lg-5 ml-lg-5 mt-1">Payment Gateway</h3>
                             <div _ngcontent-ng-c105331269 class="card-swiper d-none d-md-block">
                                 <div _ngcontent-ng-c105331269 class="swiper mySwiper">
                                     <div _ngcontent-ng-c105331269 class="swiper-wrapper">
@@ -1366,7 +1366,7 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div _ngcontent-ng-c105331269 class="col-12 col-lg-4 d-flex justify-content-center">
+                                                    <!-- <div _ngcontent-ng-c105331269 class="col-12 col-lg-4 d-flex justify-content-center">
                                                         <a _ngcontent-ng-c105331269 href="/coming-soon.html">
                                                             <div _ngcontent-ng-c105331269 class="card custom-hover-card overflow-hidden" style="background-image: url('/assets/homepageimages/indigram.webp');">
                                                                 <div _ngcontent-ng-c105331269 class="card-body text-left">
@@ -1375,7 +1375,7 @@
                                                                 </div>
                                                             </div>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                     <!---->
                                                 </div>
                                             </div>
@@ -1564,14 +1564,14 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div _ngcontent-ng-c105331269 class="swiper-slide">
+                                            <!-- <div _ngcontent-ng-c105331269 class="swiper-slide">
                                                 <div _ngcontent-ng-c105331269 class="card custom-hover-card overflow-hidden" style="background-image: url('/assets/homepageimages/indigram.webp');">
                                                     <div _ngcontent-ng-c105331269 class="card-body text-left">
                                                         <h4 _ngcontent-ng-c105331269 class="fs-16 fw-600">IndiGram</h4>
                                                         <p _ngcontent-ng-c105331269 class="fs-14 fw-400 text-muted m-0 description-text-mpc">Gorgeous, high-quality design system for mobile, tablet and desktop devices a few reasons. </p>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                             <!---->
                                         </div>
                                     </div>
@@ -1760,7 +1760,7 @@
                         </div>
                     </div>
                 </div>
-                <app-partner-logo _ngcontent-ng-c105331269 _nghost-ng-c3722189711 ngh="0">
+                <!-- <app-partner-logo _ngcontent-ng-c105331269 _nghost-ng-c3722189711 ngh="0">
                     <div _ngcontent-ng-c3722189711 class="text-center">
                         <p _ngcontent-ng-c3722189711 class="fw-500 fs-18 text-warning mb-0">OUR</p>
                         <h2 _ngcontent-ng-c3722189711 class="fw-700 text-primary mb-0">Partners</h2>
@@ -1801,7 +1801,7 @@
                             </div>
                         </div>
                     </div>
-                </app-partner-logo>
+                </app-partner-logo> -->
             </app-home-sme>
             <!---->
             <app-footer _ngcontent-ng-c1232931054 _nghost-ng-c3174313655 ngh="2">
@@ -1871,9 +1871,9 @@
                                                 <a _ngcontent-ng-c3174313655 href="/upi-direct.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">UPI Direct</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">IndiGram</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                             <div _ngcontent-ng-c3174313655 class="col-lg-2 col-md-4 col-12 mt-3 mt-lg-3 px-2 ml-lg-5">
                                                 <h4 _ngcontent-ng-c3174313655 class="fw-700 text-white mb-3">BizStack</h4>
@@ -1889,21 +1889,21 @@
                                                 <a _ngcontent-ng-c3174313655 href="/tax-payments.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">TAX Payments</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/corporate-cards.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/corporate-cards.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Corporate Prepaid Cards </h4>
                                                 </a>
                                                 <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">ONDC</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                             <div _ngcontent-ng-c3174313655 class="col-lg-2 col-md-4 col-12 mt-3 mt-lg-3 px-2 ml-lg-5">
                                                 <h4 _ngcontent-ng-c3174313655 class="fw-700 text-white mb-3">Resources</h4>
                                                 <a _ngcontent-ng-c3174313655 href="/privacy-policy.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Privacy Policy</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/terms-condition.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/terms-condition.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Terms &amp;Conditions</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                         </div>
                                     </div>
