--- a/multibank-account.html
+++ b/multibank-account.html
@@ -872,7 +872,7 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
+                                                    <!-- <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
                                                         <a _ngcontent-ng-c4214895665 href="/coming-soon.html">
                                                             <div _ngcontent-ng-c4214895665 class="row my-2">
                                                                 <div _ngcontent-ng-c4214895665 class="col-2 col-md-2">
@@ -884,7 +884,7 @@
                                                                 </div>
                                                             </div>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -1041,7 +1041,7 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
+                                                    <!-- <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
                                                         <a _ngcontent-ng-c4214895665 href="/corporate-cards.html">
                                                             <div _ngcontent-ng-c4214895665 class="row my-2">
                                                                 <div _ngcontent-ng-c4214895665 class="col-2 col-md-2">
@@ -1066,7 +1066,7 @@
                                                                 </div>
                                                             </div>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -1085,13 +1085,13 @@
                                                                     <img _ngcontent-ng-c4214895665 loading="lazy" alt="Navbar Icon" src="assets/images/header-image/instant-settlement_pg.svg">
                                                                 </div>
                                                                 <div _ngcontent-ng-c4214895665 class="col-10 col-md-10">
-                                                                    <h4 _ngcontent-ng-c4214895665 class="fs-14 m-0 fw-600">privacy Policy</h4>
+                                                                    <h4 _ngcontent-ng-c4214895665 class="fs-14 m-0 fw-600">Privacy Policy</h4>
                                                                     <p _ngcontent-ng-c4214895665 class="p-header">Accept payments on Website or APP</p>
                                                                 </div>
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
+                                                    <!-- <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
                                                         <a _ngcontent-ng-c4214895665 href="/terms-condition.html">
                                                             <div _ngcontent-ng-c4214895665 class="row my-2">
                                                                 <div _ngcontent-ng-c4214895665 class="col-2 col-md-2">
@@ -1103,7 +1103,7 @@
                                                                 </div>
                                                             </div>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -1232,7 +1232,7 @@
                             </h2>
                             <p _ngcontent-ng-c978942507 class="text-muted fw-500 fs-16 mb-0">Say goodbye to juggling between different apps and platforms-SpherePay streamlines your experience by presenting a clear, unified dashboard that allows you to monitor balances, track transactions, and manage payments effortlessly. Simplify your financial management and enjoy full control over your accounts with Indiconnect’s innovative solution!</p>
                             <div _ngcontent-ng-c978942507 class="pt-4">
-                                <a _ngcontent-ng-c978942507 href="/contact-us">
+                                <a _ngcontent-ng-c978942507 href="/contact-us.html">
                                     <button _ngcontent-ng-c978942507 class="btn btn-primary p-2 py-2 px-4 fw-600 fs-16">Contact Us</button>
                                 </a>
                                 <!-- <a _ngcontent-ng-c978942507 href="https://merchant.indiconnect.in/pages/login?type=1">
@@ -1343,9 +1343,9 @@
                                                 <a _ngcontent-ng-c3174313655 href="/upi-direct.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">UPI Direct</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">IndiGram</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                             <div _ngcontent-ng-c3174313655 class="col-lg-2 col-md-4 col-12 mt-3 mt-lg-3 px-2 ml-lg-5">
                                                 <h4 _ngcontent-ng-c3174313655 class="fw-700 text-white mb-3">BizStack</h4>
@@ -1361,21 +1361,21 @@
                                                 <a _ngcontent-ng-c3174313655 href="/tax-payments.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">TAX Payments</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/corporate-cards.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/corporate-cards.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Corporate Prepaid Cards </h4>
                                                 </a>
                                                 <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">ONDC</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                             <div _ngcontent-ng-c3174313655 class="col-lg-2 col-md-4 col-12 mt-3 mt-lg-3 px-2 ml-lg-5">
                                                 <h4 _ngcontent-ng-c3174313655 class="fw-700 text-white mb-3">Resources</h4>
                                                 <a _ngcontent-ng-c3174313655 href="/privacy-policy.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Privacy Policy</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/terms-condition.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/terms-condition.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Terms &amp;Conditions</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                         </div>
                                     </div>
