--- a/pay-out.html
+++ b/pay-out.html
@@ -789,7 +789,7 @@
             }
         </style>
         <meta name="og:title" content="Payouts">
-        <meta name="og:description" content="Send Bulk Payments instantly with SpherePay Payouts API">
+        <meta name="og:description" content="Send Bulk Payments instantly with SpherePay Payouts">
     </head>
     <body>
         <!--nghm-->
@@ -880,7 +880,7 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
+                                                    <!-- <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
                                                         <a _ngcontent-ng-c4214895665 href="/coming-soon.html">
                                                             <div _ngcontent-ng-c4214895665 class="row my-2">
                                                                 <div _ngcontent-ng-c4214895665 class="col-2 col-md-2">
@@ -892,7 +892,7 @@
                                                                 </div>
                                                             </div>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -1049,7 +1049,7 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
+                                                    <!-- <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
                                                         <a _ngcontent-ng-c4214895665 href="/corporate-cards.html">
                                                             <div _ngcontent-ng-c4214895665 class="row my-2">
                                                                 <div _ngcontent-ng-c4214895665 class="col-2 col-md-2">
@@ -1075,7 +1075,7 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                </div>
+                                                </div> -->
                                             </div>
                                         </div>
                                     </div>
@@ -1136,7 +1136,7 @@
                     <div _ngcontent-ng-c481277580 class="row mt-5 mt-md-0 ml-lg-5">
                         <div _ngcontent-ng-c481277580 class="col-12 col-lg-7 mt-4 ml-lg-0">
                             <h1 _ngcontent-ng-c481277580 class="fw-700 text-primary">
-                                Send Bulk Payments instantly with <span _ngcontent-ng-c481277580 class="text-warning">SpherePay Payouts API</span>
+                                Send Bulk Payments instantly with <span _ngcontent-ng-c481277580 class="text-warning">SpherePay Payouts</span>
                             </h1>
                             <h5 _ngcontent-ng-c481277580 class="mt-3 text-secondary">Send Bulk Payouts to customers, partners, employees and more with 24/7 support and guaranteed reconciliation with SpherePay </h5>
                             <p _ngcontent-ng-c481277580 class="text-muted fw-400 fs-16">With spherepay, you can enjoy instant and hassle-free payouts that allow you to send payments securely to bank accounts, UPI IDs, and wallets. Our platform is designed to provide a seamless payment experience that ensures your payments are processed quickly and efficiently, giving you more time to focus on other aspects of your business. </p>
@@ -1220,7 +1220,7 @@
                 <div _ngcontent-ng-c481277580 class="container-fluid my-md-5 px-lg-5 pay-out-third-container">
                     <div _ngcontent-ng-c481277580 class="row mx-lg-5">
                         <div _ngcontent-ng-c481277580 class="col-12 col-lg-6">
-                            <h2 _ngcontent-ng-c481277580 class="text-primary fw-700 mt-2 ml-lg-5">This versatile API facilitates </h2>
+                            <h2 _ngcontent-ng-c481277580 class="text-primary fw-700 mt-2 ml-lg-5">This versatile facilitates </h2>
                             <div _ngcontent-ng-c481277580 class="row mt-lg-5 mt-3 justify-content-center d-flex">
                                 <div _ngcontent-ng-c481277580 class="col-12 col-md-5">
                                     <div _ngcontent-ng-c481277580>
@@ -1310,9 +1310,9 @@
                     <div _ngcontent-ng-c481277580 class="row mx-lg-5">
                         <div _ngcontent-ng-c481277580 class="col-12 col-md-12 col-lg-6">
                             <h2 _ngcontent-ng-c481277580 class="text-warning fs-20 lh-base fw-500 m-0">Programmers</h2>
-                            <h2 _ngcontent-ng-c481277580 class="text-primary fw-700 display-5">Embrace SpherePay Payouts API</h2>
-                            <p _ngcontent-ng-c481277580 class="fs-18 fw-500 text-muted mt-3">Crafted with developers in mind, the SpherePay Payouts API ensures swift integration with its clear documentation and RESTful APIs. Coupled with an intuitive user interface, it stands out as the ultimate business payment solution. </p>
-                            <p _ngcontent-ng-c481277580 class="fs-18 fw-500 text-muted mt-3">You can seamlessly integrate our API within our sandbox environment, acquaint yourself with the user interface, and transition to live mode within minutes of joining. </p>
+                            <h2 _ngcontent-ng-c481277580 class="text-primary fw-700 display-5">Embrace SpherePay Payouts</h2>
+                            <p _ngcontent-ng-c481277580 class="fs-18 fw-500 text-muted mt-3">Crafted with developers in mind, the SpherePay Payouts ensures swift integration with its clear documentation. Coupled with an intuitive user interface, it stands out as the ultimate business payment solution. </p>
+                            <p _ngcontent-ng-c481277580 class="fs-18 fw-500 text-muted mt-3">You can seamlessly integrate within our environment, acquaint yourself with the user interface, and transition to live mode within minutes of joining. </p>
                             <a _ngcontent-ng-c481277580 href="/payment-links.html">
                                 <button _ngcontent-ng-c481277580 class="btn btn-primary text-white mt-2 mt-lg-3 fs-16 fw-600 py-2 px-4 br-11">Payout Link </button>
                             </a>
@@ -1455,9 +1455,9 @@
                                                 <a _ngcontent-ng-c3174313655 href="/upi-direct.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">UPI Direct</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
-                                                    <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">IndiGram</h4>
-                                                </a>
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
+                                                    <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">SpherePay</h4>
+                                                </a> -->
                                             </div>
                                             <div _ngcontent-ng-c3174313655 class="col-lg-2 col-md-4 col-12 mt-3 mt-lg-3 px-2 ml-lg-5">
                                                 <h4 _ngcontent-ng-c3174313655 class="fw-700 text-white mb-3">BizStack</h4>
@@ -1473,21 +1473,21 @@
                                                 <a _ngcontent-ng-c3174313655 href="/tax-payments.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">TAX Payments</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/corporate-cards.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/corporate-cards.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Corporate Prepaid Cards </h4>
                                                 </a>
                                                 <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">ONDC</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                             <div _ngcontent-ng-c3174313655 class="col-lg-2 col-md-4 col-12 mt-3 mt-lg-3 px-2 ml-lg-5">
                                                 <h4 _ngcontent-ng-c3174313655 class="fw-700 text-white mb-3">Resources</h4>
                                                 <a _ngcontent-ng-c3174313655 href="/privacy-policy.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Privacy Policy</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/terms-condition.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/terms-condition.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Terms &amp;Conditions</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                         </div>
                                     </div>
