--- a/payment-links.html
+++ b/payment-links.html
@@ -904,7 +904,7 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
+                                                    <!-- <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
                                                         <a _ngcontent-ng-c4214895665 href="/coming-soon.html">
                                                             <div _ngcontent-ng-c4214895665 class="row my-2">
                                                                 <div _ngcontent-ng-c4214895665 class="col-2 col-md-2">
@@ -916,7 +916,7 @@
                                                                 </div>
                                                             </div>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -1073,7 +1073,7 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
+                                                    <!-- <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
                                                         <a _ngcontent-ng-c4214895665 href="/corporate-cards.html">
                                                             <div _ngcontent-ng-c4214895665 class="row my-2">
                                                                 <div _ngcontent-ng-c4214895665 class="col-2 col-md-2">
@@ -1098,7 +1098,7 @@
                                                                 </div>
                                                             </div>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -1117,13 +1117,13 @@
                                                                     <img _ngcontent-ng-c4214895665 loading="lazy" alt="Navbar Icon" src="assets/images/header-image/instant-settlement_pg.svg">
                                                                 </div>
                                                                 <div _ngcontent-ng-c4214895665 class="col-10 col-md-10">
-                                                                    <h4 _ngcontent-ng-c4214895665 class="fs-14 m-0 fw-600">privacy Policy</h4>
+                                                                    <h4 _ngcontent-ng-c4214895665 class="fs-14 m-0 fw-600">Privacy Policy</h4>
                                                                     <p _ngcontent-ng-c4214895665 class="p-header">Accept payments on Website or APP</p>
                                                                 </div>
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
+                                                    <!-- <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
                                                         <a _ngcontent-ng-c4214895665 href="/terms-condition.html">
                                                             <div _ngcontent-ng-c4214895665 class="row my-2">
                                                                 <div _ngcontent-ng-c4214895665 class="col-2 col-md-2">
@@ -1135,7 +1135,7 @@
                                                                 </div>
                                                             </div>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -1225,7 +1225,7 @@
                             <h6 _ngcontent-ng-c1420806164 class="m-0 fs-22 fw-700 text-white d-none d-lg-block">
                                 Sphere<span _ngcontent-ng-c1420806164 class="text-warning">Pay</span>
                             </h6>
-                            <h6 _ngcontent-ng-c1420806164 class="m-0 fs-20 fw-700 text-warning d-lg-none">IC</h6>
+                            <h6 _ngcontent-ng-c1420806164 class="m-0 fs-20 fw-700 text-warning d-lg-none">SP</h6>
                         </div>
                         <div _ngcontent-ng-c1420806164 class="col-3 col-md-4 text-center pt-3">
                             <h6 _ngcontent-ng-c1420806164 class="m-0 fs-22 fw-700 d-none d-lg-block">By Banks</h6>
@@ -1378,7 +1378,7 @@
                         </div>
                     </div>
                 </div>
-                <app-partner-logo _ngcontent-ng-c1420806164 _nghost-ng-c3722189711 ngh="0">
+                <!-- <app-partner-logo _ngcontent-ng-c1420806164 _nghost-ng-c3722189711 ngh="0">
                     <div _ngcontent-ng-c3722189711 class="text-center">
                         <p _ngcontent-ng-c3722189711 class="fw-500 fs-18 text-warning mb-0">OUR</p>
                         <h2 _ngcontent-ng-c3722189711 class="fw-700 text-primary mb-0">Partners</h2>
@@ -1419,7 +1419,7 @@
                             </div>
                         </div>
                     </div>
-                </app-partner-logo>
+                </app-partner-logo> -->
             </app-payment-links>
             <!---->
             <app-footer _ngcontent-ng-c1232931054 _nghost-ng-c3174313655 ngh="2">
@@ -1489,9 +1489,9 @@
                                                 <a _ngcontent-ng-c3174313655 href="/upi-direct.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">UPI Direct</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">IndiGram</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                             <div _ngcontent-ng-c3174313655 class="col-lg-2 col-md-4 col-12 mt-3 mt-lg-3 px-2 ml-lg-5">
                                                 <h4 _ngcontent-ng-c3174313655 class="fw-700 text-white mb-3">BizStack</h4>
@@ -1507,21 +1507,21 @@
                                                 <a _ngcontent-ng-c3174313655 href="/tax-payments.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">TAX Payments</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/corporate-cards.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/corporate-cards.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Corporate Prepaid Cards </h4>
                                                 </a>
                                                 <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">ONDC</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                             <div _ngcontent-ng-c3174313655 class="col-lg-2 col-md-4 col-12 mt-3 mt-lg-3 px-2 ml-lg-5">
                                                 <h4 _ngcontent-ng-c3174313655 class="fw-700 text-white mb-3">Resources</h4>
                                                 <a _ngcontent-ng-c3174313655 href="/privacy-policy.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Privacy Policy</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/terms-condition.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/terms-condition.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Terms &amp;Conditions</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                         </div>
                                     </div>
