--- a/virtual-account.html
+++ b/virtual-account.html
@@ -1050,7 +1050,7 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
+                                                    <!-- <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
                                                         <a _ngcontent-ng-c4214895665 href="/corporate-cards.html">
                                                             <div _ngcontent-ng-c4214895665 class="row my-2">
                                                                 <div _ngcontent-ng-c4214895665 class="col-2 col-md-2">
@@ -1075,7 +1075,7 @@
                                                                 </div>
                                                             </div>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -1094,13 +1094,13 @@
                                                                     <img _ngcontent-ng-c4214895665 loading="lazy" alt="Navbar Icon" src="assets/images/header-image/instant-settlement_pg.svg">
                                                                 </div>
                                                                 <div _ngcontent-ng-c4214895665 class="col-10 col-md-10">
-                                                                    <h4 _ngcontent-ng-c4214895665 class="fs-14 m-0 fw-600">privacy Policy</h4>
+                                                                    <h4 _ngcontent-ng-c4214895665 class="fs-14 m-0 fw-600">Privacy Policy</h4>
                                                                     <p _ngcontent-ng-c4214895665 class="p-header">Accept payments on Website or APP</p>
                                                                 </div>
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
+                                                    <!-- <div _ngcontent-ng-c4214895665 class="col-lg-4 mt-2 bg-hover">
                                                         <a _ngcontent-ng-c4214895665 href="/terms-condition.html">
                                                             <div _ngcontent-ng-c4214895665 class="row my-2">
                                                                 <div _ngcontent-ng-c4214895665 class="col-2 col-md-2">
@@ -1112,7 +1112,7 @@
                                                                 </div>
                                                             </div>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -1207,7 +1207,7 @@
                             <h6 _ngcontent-ng-c2648288955 class="m-0 fs-22 fw-700 text-white d-none d-lg-block">
                                 Sphere<span _ngcontent-ng-c2648288955 class="text-warning">Pay</span>
                             </h6>
-                            <h6 _ngcontent-ng-c2648288955 class="m-0 fs-20 fw-700 text-warning d-lg-none">IC</h6>
+                            <h6 _ngcontent-ng-c2648288955 class="m-0 fs-20 fw-700 text-warning d-lg-none">SP</h6>
                         </div>
                         <div _ngcontent-ng-c2648288955 class="col-3 col-md-4 text-center pt-3">
                             <h6 _ngcontent-ng-c2648288955 class="m-0 fs-22 fw-700 d-none d-lg-block">Virtual Account</h6>
@@ -1287,11 +1287,11 @@
                             <h2 _ngcontent-ng-c2648288955 class="text-warning fs-20 fw-500">For Businesses of</h2>
                             <h2 _ngcontent-ng-c2648288955 class="text-primary fw-700 display-5">All-In-One Banking Solution</h2>
                             <p _ngcontent-ng-c2648288955 class="fs-16 fw-500 text-muted mt-3">Experience seamless digital banking, automated payments, accounting, book keeping, payroll, and GST services with indiconnect Banking – your all-in-one financial solution.</p>
-                            <div _ngcontent-ng-c2648288955 class="d-flex mt-3">
+                            <!-- <div _ngcontent-ng-c2648288955 class="d-flex mt-3">
                                 <a _ngcontent-ng-c2648288955 href="https://play.google.com/store/apps/details?id=com.india.indiconnect">
                                     <img _ngcontent-ng-c2648288955 loading="lazy" alt="Google Play Store Button" src="/assets/images/common-image/playstore.webp" class="apple-playstore cursor-pointer">
                                 </a>
-                            </div>
+                            </div> -->
                             <!-- <div _ngcontent-ng-c2648288955 class="d-lg-flex flex-column flex-md-row align-items-center mt-2 mt-md-5">
                                 <p _ngcontent-ng-c2648288955 class="m-0 fs-16 fw-600 text-dark">Learn more about our community in social</p>
                                 <a _ngcontent-ng-c2648288955 href="https://www.facebook.com">
@@ -1382,9 +1382,9 @@
                                                 <a _ngcontent-ng-c3174313655 href="/upi-direct.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">UPI Direct</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">IndiGram</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                             <div _ngcontent-ng-c3174313655 class="col-lg-2 col-md-4 col-12 mt-3 mt-lg-3 px-2 ml-lg-5">
                                                 <h4 _ngcontent-ng-c3174313655 class="fw-700 text-white mb-3">BizStack</h4>
@@ -1400,21 +1400,21 @@
                                                 <a _ngcontent-ng-c3174313655 href="/tax-payments.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">TAX Payments</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/corporate-cards.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/corporate-cards.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Corporate Prepaid Cards </h4>
                                                 </a>
                                                 <a _ngcontent-ng-c3174313655 href="/coming-soon.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">ONDC</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                             <div _ngcontent-ng-c3174313655 class="col-lg-2 col-md-4 col-12 mt-3 mt-lg-3 px-2 ml-lg-5">
                                                 <h4 _ngcontent-ng-c3174313655 class="fw-700 text-white mb-3">Resources</h4>
                                                 <a _ngcontent-ng-c3174313655 href="/privacy-policy.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Privacy Policy</h4>
                                                 </a>
-                                                <a _ngcontent-ng-c3174313655 href="/terms-condition.html">
+                                                <!-- <a _ngcontent-ng-c3174313655 href="/terms-condition.html">
                                                     <h4 _ngcontent-ng-c3174313655 class="fw-600 fs-14 text-light">Terms &amp;Conditions</h4>
-                                                </a>
+                                                </a> -->
                                             </div>
                                         </div>
                                     </div>
